--- a/Electric_Field/Electric_Field.html
+++ b/Electric_Field/Electric_Field.html
@@ -556,22 +556,22 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="5" class="">
+        <a href="#overview" raw="# Overview" lo="8">
           <span class="toctext">Overview</span>
         </a>
       </li>
       <li>
-        <a href="#example-i" raw="# Example I" lo="16">
+        <a href="#example-i" raw="# Example I" lo="19">
           <span class="toctext">Example I</span>
         </a>
       </li>
       <li>
-        <a href="#problem-i" raw="# Problem I" lo="50">
+        <a href="#problem-i" raw="# Problem I" lo="53">
           <span class="toctext">Problem I</span>
         </a>
       </li>
       <li>
-        <a href="#problem-ii" raw="# Problem II" lo="73" class="">
+        <a href="#problem-ii" raw="# Problem II" lo="76">
           <span class="toctext">Problem II</span>
         </a>
       </li>
@@ -584,12 +584,12 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">2</span></div>
       </div>
       <div class="block">
-        <div class="comment active" lo="5" lf="6" style="">% Figures: % <a href="https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7">https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7</a></div>
+        <div class="comment" lo="5" lf="6">% Figures: % <a href="https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7">https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7</a></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="8" lf="8" class=""><a name="overview" number="1" lo="8" raw="# Overview" class="anchor hanchor" href="#overview" lf="8"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="8" lf="8"><a name="overview" number="1" lo="8" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
       </div>
       <div class="block">
@@ -629,7 +629,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">10</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="12" lf="13" class="">To find <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="12" lf="13">To find <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                 <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -698,7 +698,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="19" lf="19"><a name="example-i" number="2" lo="19" raw="# Example I" class="anchor hanchor" href="#example-i" lf="19"><span class="hnumber">2</span>&nbsp;<span class="htext">Example I</span></a></h1>
+        <h1 lo="19" lf="19"><a name="example-i" number="2" lo="19" raw="# Example I" class="anchor hanchor" href="#example-i"><span class="hnumber">2</span>&nbsp;<span class="htext">Example I</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">19</span></div>
       </div>
       <div class="block">
@@ -898,7 +898,7 @@ M1001 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="53" lf="53"><a name="problem-i" number="3" lo="53" raw="# Problem I" class="anchor hanchor" href="#problem-i" lf="53"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem I</span></a></h1>
+        <h1 lo="53" lf="53"><a name="problem-i" number="3" lo="53" raw="# Problem I" class="anchor hanchor" href="#problem-i"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem I</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">53</span></div>
       </div>
       <div class="block">
@@ -937,7 +937,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="59" lf="72">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
@@ -1081,7 +1081,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="76" lf="76" class=""><a name="problem-ii" number="4" lo="76" raw="# Problem II" class="anchor hanchor" href="#problem-ii" lf="76"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem II</span></a></h1>
+        <h1 lo="76" lf="76"><a name="problem-ii" number="4" lo="76" raw="# Problem II" class="anchor hanchor" href="#problem-ii"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem II</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">76</span></div>
       </div>
       <div class="block">
@@ -1120,7 +1120,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="82" lf="87">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
