--- a/rhat/rhat.html
+++ b/rhat/rhat.html
@@ -556,22 +556,22 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#the-rhat-unit-vector" raw="# The $\rhat$ Unit Vector" lo="5" class="">
+        <a href="#the-rhat-unit-vector" raw="# The $\rhat$ Unit Vector" lo="8">
           <span class="toctext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span>
         </a>
       </li>
       <li>
-        <a href="#example" raw="# Example" lo="21">
+        <a href="#example" raw="# Example" lo="24">
           <span class="toctext">Example</span>
         </a>
       </li>
       <li>
-        <a href="#problem" raw="# Problem" lo="51">
+        <a href="#problem" raw="# Problem" lo="54">
           <span class="toctext">Problem</span>
         </a>
       </li>
       <li>
-        <a href="#question" raw="# Question" lo="69">
+        <a href="#question" raw="# Question" lo="72">
           <span class="toctext">Question</span>
         </a>
       </li>
@@ -584,12 +584,12 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">2</span></div>
       </div>
       <div class="block">
-        <div class="comment active" lo="5" lf="6" style="">% Figures: % <a href="https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7">https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7</a></div>
+        <div class="comment" lo="5" lf="6">% Figures: % <a href="https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7">https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7</a></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="8" lf="8" class=""><a name="the-rhat-unit-vector" number="1" lo="8" raw="# The $\rhat$ Unit Vector" class="anchor hanchor" href="#the-rhat-unit-vector" lf="8"><span class="hnumber">1</span>&nbsp;<span class="htext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span></a></h1>
+        <h1 lo="8" lf="8"><a name="the-rhat-unit-vector" number="1" lo="8" raw="# The $\rhat$ Unit Vector" class="anchor hanchor" href="#the-rhat-unit-vector"><span class="hnumber">1</span>&nbsp;<span class="htext">The <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> Unit Vector</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
       </div>
       <div class="block">
@@ -665,7 +665,7 @@ c-16-25.333-24-45-24-59z"></path>
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
                                     </svg></span></span></span></span></span></span></span></span></span></span>;</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">22-24</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">20</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="21" lf="21">
@@ -687,7 +687,7 @@ c-16-25.333-24-45-24-59z"></path>
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
                                     </svg></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.8579em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0278em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">x</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord"><span class="mord boldsymbol"></span></span></span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.25em;"><span class="mord">^</span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">+</span><span class="mspace" style="margin-right:0.2222em;"></span></span><span class="base"><span class="strut" style="height:0.994em;vertical-align:-0.2861em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0278em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.03588em;">y</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.2861em;"><span></span></span></span></span></span></span><span class="mord accent"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord"><span class="mord boldsymbol"></span></span></span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.25em;"><span class="mord">^</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.1944em;"><span></span></span></span></span></span></span></span></span>; then</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">22-24</span></div>
+              <div class="block-info" style="display: none;"><span class="line-numbers">21</span></div>
             </div>
           </li>
           <li markerlength="3" padlength="0" lo="22" lf="24">
@@ -721,7 +721,7 @@ M1001 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="24" lf="24"><a name="example" number="2" lo="24" raw="# Example" class="anchor hanchor" href="#example" lf="24"><span class="hnumber">2</span>&nbsp;<span class="htext">Example</span></a></h1>
+        <h1 lo="24" lf="24"><a name="example" number="2" lo="24" raw="# Example" class="anchor hanchor" href="#example"><span class="hnumber">2</span>&nbsp;<span class="htext">Example</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">24</span></div>
       </div>
       <div class="block">
@@ -913,7 +913,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="54" lf="54"><a name="problem" number="3" lo="54" raw="# Problem" class="anchor hanchor" href="#problem" lf="54"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem</span></a></h1>
+        <h1 lo="54" lf="54"><a name="problem" number="3" lo="54" raw="# Problem" class="anchor hanchor" href="#problem"><span class="hnumber">3</span>&nbsp;<span class="htext">Problem</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">54</span></div>
       </div>
       <div class="block">
@@ -952,7 +952,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="60" lf="70">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
@@ -1039,7 +1039,7 @@ M834 80h400000v40h-400000z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="72" lf="72"><a name="question" number="4" lo="72" raw="# Question" class="anchor hanchor" href="#question" lf="72"><span class="hnumber">4</span>&nbsp;<span class="htext">Question</span></a></h1>
+        <h1 lo="72" lf="72"><a name="question" number="4" lo="72" raw="# Question" class="anchor hanchor" href="#question"><span class="hnumber">4</span>&nbsp;<span class="htext">Question</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">72</span></div>
       </div>
       <div class="block">
