--- a/Electric_Field/README.html
+++ b/Electric_Field/README.html
@@ -553,7 +553,7 @@
 </head>
 
 <body class="body">
-  <div id="toc" style="display: block; min-width: 5em;">
+  <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
         <a href="#general-comments" raw="# General Comments" lo="1" class="highlighted">
@@ -561,12 +561,12 @@
         </a>
       </li>
       <li>
-        <a href="#common-errors" raw="# Common errors" lo="6" class="">
+        <a href="#common-errors" raw="# Common errors" lo="9" class="">
           <span class="toctext">Common errors</span>
         </a>
       </li>
       <li>
-        <a href="#notes-from-spring-2023" raw="# Notes from Spring, 2023" lo="17" class="">
+        <a href="#notes-from-spring-2023" raw="# Notes from Spring, 2023" lo="20">
           <span class="toctext">Notes from Spring, 2023</span>
         </a>
       </li>
@@ -581,7 +581,7 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="3" lf="3" class="">The problems in this activity can be solved by dividing the solution to a problem in the Electric Force activity by a charge. The motivation for this activity and such problems is that at this point, students still have difficulty with basic vector problems.</p>
+        <p padlength="0" lo="3" lf="3" class="">The problems in this activity can be solved by dividing the solution to a problem in the Electric Force activity by a charge. The motivations for having them solve the problem by first computing a force are (1) they need additional practice with the vector calculations for electric force and (2) to emphasize the definition of electric field.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">3</span></div>
       </div>
       <div class="block">
@@ -589,61 +589,14 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="7" lf="7" class="active">I ask why we use a “infinitesimal test charge” in the definition of <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
-                                <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
-3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
-10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
--1.333 1.333-3.167 3.5-5.5 6.5s-4 4.833-5 5.5c-1 .667-2.5 1.333-4.5 2s-4.333 1
--7 1c-4.667 0-9.167-1.833-13.5-5.5S337 184 337 178c0-12.667 15.667-32.333 47-59
-H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
-c-16-25.333-24-45-24-59z"></path>
-                              </svg></span></span></span></span></span></span></span></span></span></span>. (If the charge is infinitesimal, it won’t cause the charges that create the field to move; if the field–creating charges move, the field will change. Ask for analogies where we use a lightweight instrument to measure something so the instrument does not affect what we measure.)</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">7</span></div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="block">
-        <h1 lo="9" lf="9" class=""><a name="common-errors" number="2" lo="9" raw="# Common errors" class="anchor hanchor" href="#common-errors" lf="9"><span class="hnumber">2</span>&nbsp;<span class="htext">Common errors</span></a></h1>
+        <p padlength="0" lo="7" lf="7" class="">Conceptual questions:</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <ol lo="11" lf="13" class="compact">
-          <li markerlength="3" padlength="0" lo="11" lf="11">
+        <ul lo="9" lf="13" class="compact">
+          <li markerlength="2" padlength="0" lo="9" lf="9" class="">
             <div class="block">
-              <p padlength="0" lo="11" lf="11" class="">Wrong signs on components</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">13-15</span></div>
-            </div>
-          </li>
-          <li markerlength="3" padlength="0" lo="12" lf="12">
-            <div class="block">
-              <p padlength="0" lo="12" lf="12" class="">Wrong angle on problem I and II</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">13-15</span></div>
-            </div>
-          </li>
-          <li markerlength="3" padlength="0" lo="13" lf="15">
-            <div class="block">
-              <p padlength="0" lo="13" lf="13" class="">In problem III, not recognizing vectors should be drawn at origin and not on individual changes.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">13</span></div>
-            </div>
-          </li>
-        </ol>
-        <div class="block-info" style="display: none;"><span class="line-numbers">11-13</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="15" lf="15" class="">Revision suggestions from Spring, 2023</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
-      </div>
-      <div class="block">
-        <ol lo="17" lf="18" class="compact">
-          <li markerlength="3" padlength="0" lo="17" lf="17">
-            <div class="block">
-              <p padlength="0" lo="17" lf="17" class="">Remove the “derivation” in example I. It is overly complicated.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">18-20</span></div>
-            </div>
-          </li>
-          <li markerlength="3" padlength="0" lo="18" lf="20">
-            <div class="block">
-              <p padlength="0" lo="18" lf="18" class="">Also note the equation for <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+              <p padlength="0" lo="9" lf="9" class="">Why do we sometimes see “infinitesimal test charge” in the definition of <span len="11" raw="_\bfvec{E}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">E</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -651,35 +604,88 @@ c-16-25.333-24-45-24-59z"></path>
 -7 1c-4.667 0-9.167-1.833-13.5-5.5S337 184 337 178c0-12.667 15.667-32.333 47-59
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
-                                    </svg></span></span></span></span></span></span></span></span></span></span> using <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span>.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">18</span></div>
+                                    </svg></span></span></span></span></span></span></span></span></span></span>. (If the charge is infinitesimal, it won’t cause the charges that create the field to move; if the field–creating charges move, the field will change. Ask for analogies where we use a lightweight and small instrument to measure something so the instrument does not affect what we measure.)</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
             </div>
           </li>
-        </ol>
-        <div class="block-info" style="display: none;"><span class="line-numbers">17-18</span></div>
+          <li markerlength="2" padlength="0" lo="10" lf="10" class="">
+            <div class="block">
+              <p padlength="0" lo="10" lf="10" class="">Once the electric field is computed, do you know what it will be at another point?</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="11" lf="11" class="">
+            <div class="block">
+              <p padlength="0" lo="11" lf="11" class="">Are there any other points in space that will have the same electric field magnitude?</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="12" lf="12" class="">
+            <div class="block">
+              <p padlength="0" lo="12" lf="12" class="">Does it make sense to say “the electric force at an empty point in space is X?”</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="13" lf="13" class="">
+            <div class="block">
+              <p padlength="0" lo="13" lf="13" class="">Can you think of another quantity that we use in physics, that when multiplied by a property of an object, gives a force? (Answer: Pressure x cross section gives a force.)</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">15</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">11-15</span></div>
       </div>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="20" lf="20" class=""><a name="notes-from-spring-2023" number="3" lo="20" raw="# Notes from Spring, 2023" class="anchor hanchor" href="#notes-from-spring-2023" lf="20"><span class="hnumber">3</span>&nbsp;<span class="htext">Notes from Spring, 2023</span></a></h1>
-        <div class="block-info" style="display: none;"><span class="line-numbers">20</span></div>
+        <h1 lo="15" lf="15" class=""><a name="common-errors" number="2" lo="15" raw="# Common errors" class="anchor hanchor" href="#common-errors" lf="15"><span class="hnumber">2</span>&nbsp;<span class="htext">Common errors</span></a></h1>
+        <div class="block-info" style="display: none;"><span class="line-numbers">17</span></div>
       </div>
       <div class="block">
-        <ol lo="22" lf="23" class="compact">
-          <li markerlength="3" padlength="0" lo="22" lf="22">
+        <ol lo="17" lf="19" class="compact">
+          <li markerlength="3" padlength="0" lo="17" lf="17" class="">
             <div class="block">
-              <p padlength="0" lo="22" lf="22">~50% of students only finished problem I. Many did it using the <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> method b/c that is what I did on the board last.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">23</span></div>
+              <p padlength="0" lo="17" lf="17" class="">Wrong signs on components</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">21</span></div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="23" lf="23">
+          <li markerlength="3" padlength="0" lo="18" lf="18" class="">
             <div class="block">
-              <p padlength="0" lo="23" lf="23">~20% of students got to problem III. Only 1/25 finished.</p>
-              <div class="block-info" style="display: none;"><span class="line-numbers">23</span></div>
+              <p padlength="0" lo="18" lf="18" class="">Wrong angle for problem I and II</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">21</span></div>
+            </div>
+          </li>
+          <li markerlength="3" padlength="0" lo="19" lf="19" class="">
+            <div class="block">
+              <p padlength="0" lo="19" lf="19" class="">In problem III, not recognizing vectors should be drawn at origin and not on individual changes.</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">21</span></div>
             </div>
           </li>
         </ol>
-        <div class="block-info" style="display: none;"><span class="line-numbers">22-23</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">19-21</span></div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="block">
+        <h1 lo="21" lf="21" class=""><a name="notes-from-spring-2023" number="3" lo="21" raw="# Notes from Spring, 2023" class="anchor hanchor" href="#notes-from-spring-2023" lf="21"><span class="hnumber">3</span>&nbsp;<span class="htext">Notes from Spring, 2023</span></a></h1>
+        <div class="block-info" style="display: none;"><span class="line-numbers">23</span></div>
+      </div>
+      <div class="block">
+        <ol lo="23" lf="24" class="compact">
+          <li markerlength="3" padlength="0" lo="23" lf="23">
+            <div class="block">
+              <p padlength="0" lo="23" lf="23" class="">~50% of students only finished problem I. Many did it using the <span len="7" raw="_\rhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7079em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">r</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1944em;"><span class="mord">^</span></span></span></span></span></span></span></span></span></span> method b/c that is what I did on the board last.</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">26</span></div>
+            </div>
+          </li>
+          <li markerlength="3" padlength="0" lo="24" lf="24">
+            <div class="block">
+              <p padlength="0" lo="24" lf="24">~20% of students got to problem III. Only 1/25 finished.</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">26</span></div>
+            </div>
+          </li>
+        </ol>
+        <div class="block-info" style="display: none;"><span class="line-numbers">25-26</span></div>
       </div>
     </div>
   </div>
