--- a/Electric_Field/Electric_Field.html
+++ b/Electric_Field/Electric_Field.html
@@ -944,7 +944,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="57" lf="71">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
@@ -1134,7 +1134,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="87" lf="94">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
