--- a/rhat/rhat.html
+++ b/rhat/rhat.html
@@ -1239,7 +1239,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="111" lf="122">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>:</p>
             </div>
